--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
@@ -16,10 +15,12 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "sequelize": "^6.21.3",
+    "sequelize": "^6.21.4",
+    "sequelize-cli": "^6.4.1",
     "socket.io": "^4.5.1",
-    "sqlite3": "^5.0.10",
+    "sqlite3": "^5.0.11",
     "uuid": "^8.3.2"
   }
 }
