--- a/user-service/package.json
+++ b/user-service/package.json
@@ -7,18 +7,25 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "cd ../ && husky install ./user-service/.husky",
+    "lint": "npx eslint .",
+    "lint-fix": "npx eslint . --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.23.0",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "husky": "^8.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.5"
   }
 }
