--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "eslint": "^8.21.0",
+    "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
     "express": "^4.18.1",
