--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint .",
+    "lint-fix": "npx eslint . --fix",
+    "migrate": "node_modules/.bin/sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.23.0",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "node-schedule": "^2.1.0",
     "sequelize": "^6.21.4",
     "sequelize-cli": "^6.4.1",
     "socket.io": "^4.5.1",
