Add matching functionality to match users within 30 seconds

--- a/matching-service/.eslintrc.json
+++ b/matching-service/.eslintrc.json
@@ -11,6 +11,7 @@
     "parserOptions": {
         "ecmaVersion": "latest"
     },
+    "ignorePatterns": ["migrations/*.js", "seeders/*.js"],
     "rules": {
         "indent": [
             "error",
