--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hackerrank/firepad": "0.3.1",
+    "@monaco-editor/react": "4.4.1",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.9.1",
     "@reduxjs/toolkit": "^1.8.5",
@@ -12,11 +14,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "firebase": "8.8.1",
+    "monaco-editor": "0.33.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
