--- a/user-service/package.json
+++ b/user-service/package.json
@@ -17,14 +17,15 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.23.0",
-    "nodemon": "^2.0.19",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "firebase-admin": "^11.1.0",
     "husky": "^8.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.5"
