Fix migrate script bug and add semicolon to eslint lint check

--- a/matching-service/.eslintrc.json
+++ b/matching-service/.eslintrc.json
@@ -25,10 +25,7 @@
             "error",
             "double"
         ],
-        "semi": [
-            "error",
-            "always"
-        ],
+        "semi": 2,
         "object-curly-spacing": [
             "error",
             "always",
