--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint .",
     "lint-fix": "npx eslint . --fix",
-    "migrate": "./node_modules/.bin/sequelize db:migrate"
+    "migrate": "sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
