--- a/communication-service/package.json
+++ b/communication-service/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "http": "^0.0.1-security",
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.3"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
