--- a/collab-service/package.json
+++ b/collab-service/package.json
@@ -18,11 +18,13 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.1",
     "mongo": "^0.1.0",
-    "mongoose": "^6.4.5"
+    "mongoose": "^6.4.5",
+    "socket.io": "^4.5.3"
   }
 }
