--- a/collab-service/package.json
+++ b/collab-service/package.json
@@ -25,6 +25,7 @@
     "joi": "^17.6.1",
     "mongo": "^0.1.0",
     "mongoose": "^6.4.5",
+    "node-schedule": "^2.1.0",
     "socket.io": "^4.5.3"
   }
 }
