--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,19 +14,22 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "react-firebase-hooks": "3.0.5",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-countdown-circle-timer": "^3.0.9",
-    "react-dom": "^18.2.0",
     "firebase": "8.8.1",
     "monaco-editor": "0.33.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-chat-elements": "^12.0.5",
+    "react-countdown-circle-timer": "^3.0.9",
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "3.0.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.5",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.1",
+    "stream-chat": "^8.0.0",
+    "stream-chat-react": "^10.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
