--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "firebase": "8.8.1",
     "monaco-editor": "0.33.0",
+    "peerjs": "^1.4.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chat-elements": "^12.0.5",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.5",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.1",
     "stream-chat": "^8.0.0",
