--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -29,6 +29,7 @@
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.2",
     "sqlite3": "^5.0.11",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "uuid4": "^2.0.3"
   }
 }
