--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "node-schedule": "^2.1.0",
     "sequelize": "^6.21.4",
