Dockerize frontend and connect services

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,4 +4,7 @@ COPY package*.json ./
 RUN npm install --force
 COPY . . 
 EXPOSE 3000
-CMD ["npm", "run", "build"]
+# RUN npm install -g serve
+# RUN chmod +x ./run.sh
+# # CMD ["/usr/app/run"]
+CMD ["npm", "start"]
