--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,6 +47,8 @@ services:
     environment:
       ENV: production
       DB_LOCAL_URI: mongodb://mongo:27017/collab
+      PORT: 8080
+      URI_QUESTION_SVC: http://question-service:8081
     depends_on:
       - mongo
       - question-service
@@ -63,15 +65,15 @@ services:
     container_name: frontend
     build:
       context: ./frontend
-    command: npm run build
+    command: npm start
     ports:
       - "3000:3000"
     environment:
-      URI_CHAT_SVC: http://communication-service:9000
-      URI_SESSION_SVC: http://collab-service:8080
-      URI_MATCHING_SVC: http://matching-service:8001
-      URI_QUESTION_SVC: http://question-service:8081
-      URI_USER_SVC: http://user-service:8000
+      REACT_APP_URI_CHAT_SVC: http://localhost:9000
+      REACT_APP_URI_SESSION_SVC: http://localhost:8080
+      REACT_APP_URI_MATCHING_SVC: http://localhost:8001
+      REACT_APP_URI_QUESTION_SVC: http://localhost:8081
+      REACT_APP_URI_USER_SVC: http://localhost:8000
     depends_on:
       - question-service
       - matching-service
