--- a/matching-service/Dockerfile.dev
+++ b/matching-service/Dockerfile.dev
@@ -8,5 +8,4 @@ RUN chmod +x /bin/wait-for-it.sh
 
 RUN npm install 
 COPY . . 
-RUN npm run migrate
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
