--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,11 @@
-FROM node:alpine
+FROM node:16-alpine as builder
 WORKDIR /usr/app
 COPY package*.json ./
 RUN npm install --force
 COPY . . 
-# RUN npm install -g serve
-# RUN chmod +x ./run.sh
-# # CMD ["/usr/app/run"]
-CMD ["npm", "start"]
+RUN npm run builder
+
+FROM nginx
+EXPOSE 3000
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /usr/app/build /usr/share/nginx/html
