--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+language: generic
 services:
   - docker
 
@@ -6,7 +7,7 @@ before_install:
   - docker build -t taubar/algohike-test -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-  - docker run taubar/algohike-test npm test -- --coverage
+  - docker run -e CI=true taubar/algohike-test npm test
 
 after_success:
   - docker build -t taubar/algohike-frontend ./frontend
