--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t taubar/algohike-test -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-  - docker run -e CI=true taubar/algohike-test npm test --passWithNoTests
+  - docker run -e CI=true taubar/algohike-test npm test
 
 after_success:
   - docker build -t taubar/algohike-frontend ./frontend
