Add k8s manifests and remove nginx

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /usr/app
 COPY package*.json ./
 RUN npm install --force
 COPY . . 
-RUN npm run builder
+RUN npm run build
 
 FROM nginx
 EXPOSE 3000
