Dockerize history-service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,9 +49,11 @@ services:
       DB_LOCAL_URI: mongodb://mongo:27017/collab
       PORT: 8080
       URI_QUESTION_SVC: http://question-service:8081
+      URI_HISTORY_SVC: http://history-service:8003
     depends_on:
       - mongo
       - question-service
+      - history-service
 
   communication-service:
     container_name: communication-service
@@ -60,6 +62,20 @@ services:
     command: npm start
     ports:
       - "9000:9000"
+  
+  history-service:
+    container_name: history-service
+    build:
+      context: ./history-service
+    command: npm start
+    ports:
+      - "8003:8003"
+    environment:
+      ENV: production
+      DB_LOCAL_URI: mongodb://mongo:27017/history
+    depends_on:
+      - mongo
+      - question-service
   
   frontend:
     container_name: frontend
