--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.5",
     "redux-persist": "^6.0.0",
+    "sass": "^1.56.0",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.1",
