--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@monaco-editor/react": "4.4.1",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.9.1",
+    "@mui/x-data-grid": "^5.17.10",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
